add multi selector component

--- a/app/views/mass-mailing.html
+++ b/app/views/mass-mailing.html
@@ -233,6 +233,7 @@
                   <div class="form-group">
                     <label class="control-label col-lg-3" translate="MASS_MAIL.SHIPPING_METHOD.CARRIER">Carrier</label>
                     <div class="col-lg-7">
+                      <!--<div ng-dropdown-multiselect="" options="ctrl.carriers" selected-model="ctrl.carrier"></div>-->
                       <select class="form-control">
                         <option value="CHRONOPOST">CHRONOPOST</option>
                         <option value="COLISSIMO">COLISSIMO</option>
