--- a/app/views/order-order.html
+++ b/app/views/order-order.html
@@ -531,7 +531,7 @@
                       <div class="form-group">
                         <div class="checkbox">
                           <label class="">
-                            <input type="checkbox" class="check_box" value="1" unchecked="">
+                            <input type="checkbox" class="check_box" required>
                             <span translate="ORDER_ORDER.HAZARDOUS.TITLE"></span>
                           </label>
                         </div>
